:sparkles: Renamed lib & cleaned CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,18 @@
 cmake_minimum_required (VERSION 3.2)
-project(rediscamclient)
+project(redisimagehelper VERSION 0.1)
 
 set (CMAKE_CXX_STANDARD 11)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake/module)
-
-find_package(OpenCV REQUIRED core opencv_imgcodecs opencv_highgui opencv_imgproc opencv_videoio)
-if (NOT OPENCV_FOUND)
-        message(FATAL_ERROR "OpenCV not found.")
-endif()
 
 find_package(hiredis REQUIRED)
 if (NOT HIREDIS_FOUND)
     message(FATAL_ERROR "hiredis not found.")
 endif()
 
-find_package(curlpp REQUIRED)
+find_package(curlpp)
 if (NOT CURLPP_FOUND)
-    message(FATAL_ERROR "curlpp not found.")
+    message("Warning: cURLpp not found.")
 endif()
 
 include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include )
@@ -26,23 +21,23 @@ include_directories($(/usr/local/include/gstreamer-1.0) /gst)
 file(GLOB HEADERS include/*.hpp)
 
 file(GLOB LIBRARY_SOURCES
-    src/RedisCameraClient.cpp)
+    src/RedisImageHelper.cpp)
 file(GLOB LIBRARY_HEADERS
-    include/CameraFrame.hpp
-    include/RedisCameraClient.hpp)
+    include/Image.hpp
+    include/RedisImageHelper.hpp)
 
 #Used to have access to CMAKE_INSTALL_*DIR
 include(GNUInstallDirs)
-add_library(rediscamclient SHARED ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
-set_target_properties(rediscamclient PROPERTIES VERSION 0.1
-                                                SOVERSION 1)
-set_target_properties(rediscamclient PROPERTIES PUBLIC_HEADER "${LIBRARY_HEADERS}")
+add_library(redisimagehelper SHARED ${LIBRARY_SOURCES} ${LIBRARY_HEADERS})
+set_target_properties(redisimagehelper PROPERTIES VERSION 0.1
+                                                  SOVERSION 1)
+set_target_properties(redisimagehelper PROPERTIES PUBLIC_HEADER "${LIBRARY_HEADERS}")
 # This line will find the .pc.in tempalte file and replace @variable with their equivalent here
-# For example in rediscamclient.pc.in the variable @PROJECT_NAME@ will be replaced with
-configure_file(rediscamclient.pc.in rediscamclient.pc @ONLY)
+# For example in redisimagehelper.pc.in the variable @PROJECT_NAME@ will be replaced with
+configure_file(redisimagehelper.pc.in redisimagehelper.pc @ONLY)
 
-install(TARGETS rediscamclient
+install(TARGETS redisimagehelper
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/rediscamclient)
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/redisimagehelper)
 
-install(FILES ${CMAKE_BINARY_DIR}/rediscamclient.pc DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
+install(FILES ${CMAKE_BINARY_DIR}/redisimagehelper.pc DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
